<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="33dp"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="104dp"
        android:padding="@dimen/padding_regular"
        android:text="@string/choose_a_desert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="159dp"
        android:layout_height="146dp"
        android:layout_below="@id/choose_dessert"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/donuts"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/donut_circle"
        android:onClick="showDonutOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDonut"
        android:layout_width="181dp"
        android:layout_height="146dp"
        android:layout_below="@id/choose_dessert"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="164dp"
        android:padding="@dimen/padding_wide"
        android:text="@string/donuts"
        app:layout_constraintStart_toEndOf="@+id/donut"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="159dp"
        android:layout_height="146dp"
        android:layout_below="@id/choose_dessert"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="336dp"
        android:contentDescription="@string/ice_cream_sandwiches"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_ice_cream"
        android:layout_width="181dp"
        android:layout_height="146dp"
        android:layout_below="@id/choose_dessert"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="336dp"
        android:padding="@dimen/padding_wide"
        android:text="@string/ice_cream_sandwiches"
        app:layout_constraintStart_toEndOf="@+id/ice_cream"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="159dp"
        android:layout_height="146dp"
        android:layout_below="@id/choose_dessert"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="500dp"
        android:contentDescription="@string/froyo"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/froyo_circle"
        android:onClick="showFroyoOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_froyo"
        android:layout_width="181dp"
        android:layout_height="146dp"
        android:layout_below="@id/choose_dessert"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="500dp"
        android:padding="@dimen/padding_wide"
        android:text="@string/froyo"
        app:layout_constraintStart_toEndOf="@+id/froyo"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>